# ps2suitcase

./: Cargo.toml
.github/workflows/: build-psu-packer.yml  build-suitcase.yml  release.yml
crates/ps2-filetypes/src/common/: psu.rs  sjis.rs
crates/ps2-filetypes/src/parser/: icon_sys.rs
crates/psu-packer/: Cargo.toml
crates/psu-packer/src/: args.rs  config.rs  main.rs
crates/suitcase/src/tabs/: icon_sys_viewer.rs  title_cfg_viewer.rs
