[package]
name = "psu-packer"
description = "PSU management utility"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
ps2-filetypes = { path = "../ps2-filetypes" }
chrono = "0.4.42"
colored = "3.0.0"
clap = { version = "4.6.0", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.5"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
